<resources>
    <string name="app_name">Sample Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
    <string name="send">Send</string>
    <string name="send_sms">Send SMS</string>
    <string name="message_sent">Message Sent</string>
    <string name="message">Message</string>
    <string name="go_to_recevie_sms">Go to Recevie SMS</string>
    <string name="please_fill_the_blanks">Please fill all blanks</string>
    <string name="submit_number_for_receving_sms">Submit Number For Receving SMS</string>
    <string name="submit">Submit</string>
    <string name="error">Error</string>
    <string name="number_is">Number: %s</string>
    <string name="number_submitted">Submitted</string>
</resources>